--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AquiTemLanche
 @using AquiTemLanche.Models
+@using AquiTemLanche.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
